--- a/public/blogs/javab/index.html
+++ b/public/blogs/javab/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs/javab/">
+<meta property="og:url" content="http://localhost:1313/blogs/javab/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Giới thiệu về ngôn ngữ Java">
   <meta property="og:description" content="Java là một trong những ngôn ngữ lập trình phổ biến và mạnh mẽ nhất trên thế giới. Được phát triển bởi Sun Microsystems (nay là Oracle), Java đã chinh phục được nhiều lập trình viên nhờ tính ổn định, khả năng mở rộng và tính di động cao. Trong bài viết này, chúng ta sẽ cùng tìm hiểu về ngôn ngữ Java, đặc điểm nổi bật và ứng dụng của nó trong thế giới lập trình.">
@@ -413,22 +413,22 @@ Giới thiệu về ngôn ngữ Java | Nhật Trường Blog
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavab%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavab%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20ng%c3%b4n%20ng%e1%bb%af%20Java&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavab%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20ng%c3%b4n%20ng%e1%bb%af%20Java&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavab%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20ng%c3%b4n%20ng%e1%bb%af%20Java: http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavab%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20ng%c3%b4n%20ng%e1%bb%af%20Java: http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavab%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20ng%c3%b4n%20ng%e1%bb%af%20Java&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavab%2f'>
+                  <a target="_blank" href='mailto:?subject=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20ng%c3%b4n%20ng%e1%bb%af%20Java&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavab%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
