--- a/public/blogs/javac/index.html
+++ b/public/blogs/javac/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs/javac/">
+<meta property="og:url" content="http://localhost:1313/blogs/javac/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Cài đặt Spring Boot trong Java và xây dựng dự án cơ bản">
   <meta property="og:description" content="Spring Boot là một framework mạnh mẽ giúp phát triển ứng dụng Java nhanh chóng và dễ dàng. Trong bài viết này, chúng ta sẽ tìm hiểu cách cài đặt Spring Boot và tạo một dự án Spring Boot cơ bản, bao gồm việc tạo các API REST đơn giản.">
@@ -465,22 +465,22 @@ Sau khi cài đặt, kiểm tra Maven bằng lệnh:</li>
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavac%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavac%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=C%c3%a0i%20%c4%91%e1%ba%b7t%20Spring%20Boot%20trong%20Java%20v%c3%a0%20x%c3%a2y%20d%e1%bb%b1ng%20d%e1%bb%b1%20%c3%a1n%20c%c6%a1%20b%e1%ba%a3n&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavac%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=C%c3%a0i%20%c4%91%e1%ba%b7t%20Spring%20Boot%20trong%20Java%20v%c3%a0%20x%c3%a2y%20d%e1%bb%b1ng%20d%e1%bb%b1%20%c3%a1n%20c%c6%a1%20b%e1%ba%a3n&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavac%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=C%c3%a0i%20%c4%91%e1%ba%b7t%20Spring%20Boot%20trong%20Java%20v%c3%a0%20x%c3%a2y%20d%e1%bb%b1ng%20d%e1%bb%b1%20%c3%a1n%20c%c6%a1%20b%e1%ba%a3n: http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavac%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=C%c3%a0i%20%c4%91%e1%ba%b7t%20Spring%20Boot%20trong%20Java%20v%c3%a0%20x%c3%a2y%20d%e1%bb%b1ng%20d%e1%bb%b1%20%c3%a1n%20c%c6%a1%20b%e1%ba%a3n: http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavac%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=C%c3%a0i%20%c4%91%e1%ba%b7t%20Spring%20Boot%20trong%20Java%20v%c3%a0%20x%c3%a2y%20d%e1%bb%b1ng%20d%e1%bb%b1%20%c3%a1n%20c%c6%a1%20b%e1%ba%a3n&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavac%2f'>
+                  <a target="_blank" href='mailto:?subject=C%c3%a0i%20%c4%91%e1%ba%b7t%20Spring%20Boot%20trong%20Java%20v%c3%a0%20x%c3%a2y%20d%e1%bb%b1ng%20d%e1%bb%b1%20%c3%a1n%20c%c6%a1%20b%e1%ba%a3n&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavac%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
