--- a/public/blogs2/scripta/index.html
+++ b/public/blogs2/scripta/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs2/scripta/">
+<meta property="og:url" content="http://localhost:1313/blogs2/scripta/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Tìm hiểu ngôn ngữ lập trình JavaScript">
   <meta property="og:description" content="JavaScript (JS) là ngôn ngữ lập trình phổ biến, linh hoạt và mạnh mẽ, được sử dụng chủ yếu cho phát triển web. Nó cho phép tạo các trang web động và tương tác, đồng thời được ứng dụng rộng rãi trong các công nghệ hiện đại như Node.js, React, và Angular.">
@@ -444,22 +444,22 @@ Tìm hiểu ngôn ngữ lập trình JavaScript | Nhật Trường Blog
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripta%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripta%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=T%c3%acm%20hi%e1%bb%83u%20ng%c3%b4n%20ng%e1%bb%af%20l%e1%ba%adp%20tr%c3%acnh%20JavaScript&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripta%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=T%c3%acm%20hi%e1%bb%83u%20ng%c3%b4n%20ng%e1%bb%af%20l%e1%ba%adp%20tr%c3%acnh%20JavaScript&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripta%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=T%c3%acm%20hi%e1%bb%83u%20ng%c3%b4n%20ng%e1%bb%af%20l%e1%ba%adp%20tr%c3%acnh%20JavaScript: http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripta%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=T%c3%acm%20hi%e1%bb%83u%20ng%c3%b4n%20ng%e1%bb%af%20l%e1%ba%adp%20tr%c3%acnh%20JavaScript: http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripta%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=T%c3%acm%20hi%e1%bb%83u%20ng%c3%b4n%20ng%e1%bb%af%20l%e1%ba%adp%20tr%c3%acnh%20JavaScript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripta%2f'>
+                  <a target="_blank" href='mailto:?subject=T%c3%acm%20hi%e1%bb%83u%20ng%c3%b4n%20ng%e1%bb%af%20l%e1%ba%adp%20tr%c3%acnh%20JavaScript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripta%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
