--- a/public/blogs/javaa/index.html
+++ b/public/blogs/javaa/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs/javaa/">
+<meta property="og:url" content="http://localhost:1313/blogs/javaa/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Toàn bộ kiến thức Java từ cơ bản đến nâng cao">
   <meta property="og:description" content="Java là một ngôn ngữ lập trình rất phổ biến với khả năng phát triển đa nền tảng. Phiên bản Java 8 đánh dấu một bước ngoặt lớn trong việc giới thiệu các tính năng mạnh mẽ như Stream API và Lambda Expressions, giúp việc xử lý dữ liệu trở nên dễ dàng hơn bao giờ hết. Trong bài viết này, chúng ta sẽ khám phá các chủ đề quan trọng để học Java từ cơ bản đến nâng cao, bao gồm Java Core, Spring Boot, JDBC, các Design Patterns, bài tập thực hành và tài liệu học Java hữu ích.">
@@ -535,22 +535,22 @@ Toàn bộ kiến thức Java từ cơ bản đến nâng cao | Nhật Trường
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaa%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaa%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=To%c3%a0n%20b%e1%bb%99%20ki%e1%ba%bfn%20th%e1%bb%a9c%20Java%20t%e1%bb%ab%20c%c6%a1%20b%e1%ba%a3n%20%c4%91%e1%ba%bfn%20n%c3%a2ng%20cao&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaa%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=To%c3%a0n%20b%e1%bb%99%20ki%e1%ba%bfn%20th%e1%bb%a9c%20Java%20t%e1%bb%ab%20c%c6%a1%20b%e1%ba%a3n%20%c4%91%e1%ba%bfn%20n%c3%a2ng%20cao&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaa%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=To%c3%a0n%20b%e1%bb%99%20ki%e1%ba%bfn%20th%e1%bb%a9c%20Java%20t%e1%bb%ab%20c%c6%a1%20b%e1%ba%a3n%20%c4%91%e1%ba%bfn%20n%c3%a2ng%20cao: http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaa%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=To%c3%a0n%20b%e1%bb%99%20ki%e1%ba%bfn%20th%e1%bb%a9c%20Java%20t%e1%bb%ab%20c%c6%a1%20b%e1%ba%a3n%20%c4%91%e1%ba%bfn%20n%c3%a2ng%20cao: http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaa%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=To%c3%a0n%20b%e1%bb%99%20ki%e1%ba%bfn%20th%e1%bb%a9c%20Java%20t%e1%bb%ab%20c%c6%a1%20b%e1%ba%a3n%20%c4%91%e1%ba%bfn%20n%c3%a2ng%20cao&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaa%2f'>
+                  <a target="_blank" href='mailto:?subject=To%c3%a0n%20b%e1%bb%99%20ki%e1%ba%bfn%20th%e1%bb%a9c%20Java%20t%e1%bb%ab%20c%c6%a1%20b%e1%ba%a3n%20%c4%91%e1%ba%bfn%20n%c3%a2ng%20cao&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaa%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
