--- a/public/blogs/javad/index.html
+++ b/public/blogs/javad/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs/javad/">
+<meta property="og:url" content="http://localhost:1313/blogs/javad/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Các thuộc tính của Spring Boot trong Java">
   <meta property="og:description" content="Spring Boot cung cấp rất nhiều thuộc tính cấu hình để tùy chỉnh và tối ưu hóa ứng dụng. Trong bài viết này, chúng ta sẽ khám phá các thuộc tính quan trọng của Spring Boot và cách sử dụng chúng.">
@@ -442,22 +442,22 @@ Tài liệu tham khảo</li>
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavad%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavad%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=C%c3%a1c%20thu%e1%bb%99c%20t%c3%adnh%20c%e1%bb%a7a%20Spring%20Boot%20trong%20Java&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavad%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=C%c3%a1c%20thu%e1%bb%99c%20t%c3%adnh%20c%e1%bb%a7a%20Spring%20Boot%20trong%20Java&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavad%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=C%c3%a1c%20thu%e1%bb%99c%20t%c3%adnh%20c%e1%bb%a7a%20Spring%20Boot%20trong%20Java: http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavad%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=C%c3%a1c%20thu%e1%bb%99c%20t%c3%adnh%20c%e1%bb%a7a%20Spring%20Boot%20trong%20Java: http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavad%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=C%c3%a1c%20thu%e1%bb%99c%20t%c3%adnh%20c%e1%bb%a7a%20Spring%20Boot%20trong%20Java&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavad%2f'>
+                  <a target="_blank" href='mailto:?subject=C%c3%a1c%20thu%e1%bb%99c%20t%c3%adnh%20c%e1%bb%a7a%20Spring%20Boot%20trong%20Java&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavad%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
