--- a/public/blogs/javae/index.html
+++ b/public/blogs/javae/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs/javae/">
+<meta property="og:url" content="http://localhost:1313/blogs/javae/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Giới thiệu về Spring Boot Actuator trong ứng dụng Spring Boot">
   <meta property="og:description" content="Spring Boot Actuator cung cấp các tính năng giám sát và quản lý cho các ứng dụng Spring Boot, giúp dễ dàng theo dõi và quản lý trạng thái của ứng dụng trong môi trường sản xuất. Bài viết này giới thiệu về các tính năng chính của Spring Boot Actuator và cách sử dụng chúng.">
@@ -437,22 +437,22 @@ Tài liệu tham khảo</li>
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavae%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavae%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20Spring%20Boot%20Actuator%20trong%20%e1%bb%a9ng%20d%e1%bb%a5ng%20Spring%20Boot&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavae%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20Spring%20Boot%20Actuator%20trong%20%e1%bb%a9ng%20d%e1%bb%a5ng%20Spring%20Boot&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavae%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20Spring%20Boot%20Actuator%20trong%20%e1%bb%a9ng%20d%e1%bb%a5ng%20Spring%20Boot: http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavae%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20Spring%20Boot%20Actuator%20trong%20%e1%bb%a9ng%20d%e1%bb%a5ng%20Spring%20Boot: http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavae%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20Spring%20Boot%20Actuator%20trong%20%e1%bb%a9ng%20d%e1%bb%a5ng%20Spring%20Boot&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavae%2f'>
+                  <a target="_blank" href='mailto:?subject=Gi%e1%bb%9bi%20thi%e1%bb%87u%20v%e1%bb%81%20Spring%20Boot%20Actuator%20trong%20%e1%bb%a9ng%20d%e1%bb%a5ng%20Spring%20Boot&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavae%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
