--- a/public/blogs/javaf/index.html
+++ b/public/blogs/javaf/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs/javaf/">
+<meta property="og:url" content="http://localhost:1313/blogs/javaf/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Bảo mật Spring Boot RESTful Service sử dụng Basic Authentication trong Java">
   <meta property="og:description" content="Bài viết này sẽ hướng dẫn bạn cách bảo mật một dịch vụ RESTful trong Spring Boot sử dụng Basic Authentication. Chúng ta sẽ cấu hình Spring Security để yêu cầu xác thực khi truy cập vào các endpoint của dịch vụ.">
@@ -476,22 +476,22 @@ Bảo mật Spring Boot RESTful Service sử dụng Basic Authentication trong J
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaf%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaf%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=B%e1%ba%a3o%20m%e1%ba%adt%20Spring%20Boot%20RESTful%20Service%20s%e1%bb%ad%20d%e1%bb%a5ng%20Basic%20Authentication%20trong%20Java&url=http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaf%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=B%e1%ba%a3o%20m%e1%ba%adt%20Spring%20Boot%20RESTful%20Service%20s%e1%bb%ad%20d%e1%bb%a5ng%20Basic%20Authentication%20trong%20Java&url=http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaf%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=B%e1%ba%a3o%20m%e1%ba%adt%20Spring%20Boot%20RESTful%20Service%20s%e1%bb%ad%20d%e1%bb%a5ng%20Basic%20Authentication%20trong%20Java: http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaf%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=B%e1%ba%a3o%20m%e1%ba%adt%20Spring%20Boot%20RESTful%20Service%20s%e1%bb%ad%20d%e1%bb%a5ng%20Basic%20Authentication%20trong%20Java: http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaf%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=B%e1%ba%a3o%20m%e1%ba%adt%20Spring%20Boot%20RESTful%20Service%20s%e1%bb%ad%20d%e1%bb%a5ng%20Basic%20Authentication%20trong%20Java&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs%2fjavaf%2f'>
+                  <a target="_blank" href='mailto:?subject=B%e1%ba%a3o%20m%e1%ba%adt%20Spring%20Boot%20RESTful%20Service%20s%e1%bb%ad%20d%e1%bb%a5ng%20Basic%20Authentication%20trong%20Java&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs%2fjavaf%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
