--- a/public/blogs2/scriptb/index.html
+++ b/public/blogs2/scriptb/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs2/scriptb/">
+<meta property="og:url" content="http://localhost:1313/blogs2/scriptb/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Các toán tử trong JavaScript">
   <meta property="og:description" content="JavaScript cung cấp nhiều loại toán tử giúp thao tác với dữ liệu. Bài viết này sẽ tổng hợp các loại toán tử và cung cấp ví dụ minh họ.">
@@ -676,22 +676,22 @@ Các toán tử trong JavaScript | Nhật Trường Blog
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptb%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptb%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=C%c3%a1c%20to%c3%a1n%20t%e1%bb%ad%20trong%20JavaScript&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptb%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=C%c3%a1c%20to%c3%a1n%20t%e1%bb%ad%20trong%20JavaScript&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptb%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=C%c3%a1c%20to%c3%a1n%20t%e1%bb%ad%20trong%20JavaScript: http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptb%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=C%c3%a1c%20to%c3%a1n%20t%e1%bb%ad%20trong%20JavaScript: http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptb%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=C%c3%a1c%20to%c3%a1n%20t%e1%bb%ad%20trong%20JavaScript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptb%2f'>
+                  <a target="_blank" href='mailto:?subject=C%c3%a1c%20to%c3%a1n%20t%e1%bb%ad%20trong%20JavaScript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptb%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
