--- a/public/blogs2/scriptc/index.html
+++ b/public/blogs2/scriptc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs2/scriptc/">
+<meta property="og:url" content="http://localhost:1313/blogs2/scriptc/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Function trong Javascript - Cách tạo hàm và gọi hàm trong JS">
   <meta property="og:description" content="Tìm hiểu chi tiết về function trong JavaScript: cách tạo hàm, gọi hàm, và các kiểu hàm khác nhau như hàm thông thường, hàm ẩn danh, hàm mũi tên. Học cách sử dụng các tham số, đối số và các từ khóa đặc biệt như return.">
@@ -551,22 +551,22 @@ Function trong Javascript - Cách tạo hàm và gọi hàm trong JS | Nhật Tr
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptc%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptc%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=Function%20trong%20Javascript%20-%20C%c3%a1ch%20t%e1%ba%a1o%20h%c3%a0m%20v%c3%a0%20g%e1%bb%8di%20h%c3%a0m%20trong%20JS&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptc%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=Function%20trong%20Javascript%20-%20C%c3%a1ch%20t%e1%ba%a1o%20h%c3%a0m%20v%c3%a0%20g%e1%bb%8di%20h%c3%a0m%20trong%20JS&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptc%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=Function%20trong%20Javascript%20-%20C%c3%a1ch%20t%e1%ba%a1o%20h%c3%a0m%20v%c3%a0%20g%e1%bb%8di%20h%c3%a0m%20trong%20JS: http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptc%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=Function%20trong%20Javascript%20-%20C%c3%a1ch%20t%e1%ba%a1o%20h%c3%a0m%20v%c3%a0%20g%e1%bb%8di%20h%c3%a0m%20trong%20JS: http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptc%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=Function%20trong%20Javascript%20-%20C%c3%a1ch%20t%e1%ba%a1o%20h%c3%a0m%20v%c3%a0%20g%e1%bb%8di%20h%c3%a0m%20trong%20JS&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptc%2f'>
+                  <a target="_blank" href='mailto:?subject=Function%20trong%20Javascript%20-%20C%c3%a1ch%20t%e1%ba%a1o%20h%c3%a0m%20v%c3%a0%20g%e1%bb%8di%20h%c3%a0m%20trong%20JS&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptc%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
