--- a/public/blogs2/scripte/index.html
+++ b/public/blogs2/scripte/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs2/scripte/">
+<meta property="og:url" content="http://localhost:1313/blogs2/scripte/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="DOM là gì? Các thao tác với DOM trong Javascript">
   <meta property="og:description" content="Tìm hiểu DOM (Document Object Model), cách hoạt động của nó trong JavaScript và các thao tác phổ biến như truy xuất, thay đổi nội dung, thêm hoặc xóa phần tử HTML.">
@@ -489,22 +489,22 @@ DOM là gì? Các thao tác với DOM trong Javascript | Nhật Trường Blog
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripte%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripte%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=DOM%20l%c3%a0%20g%c3%ac%3f%20C%c3%a1c%20thao%20t%c3%a1c%20v%e1%bb%9bi%20DOM%20trong%20Javascript&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripte%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=DOM%20l%c3%a0%20g%c3%ac%3f%20C%c3%a1c%20thao%20t%c3%a1c%20v%e1%bb%9bi%20DOM%20trong%20Javascript&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripte%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=DOM%20l%c3%a0%20g%c3%ac%3f%20C%c3%a1c%20thao%20t%c3%a1c%20v%e1%bb%9bi%20DOM%20trong%20Javascript: http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripte%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=DOM%20l%c3%a0%20g%c3%ac%3f%20C%c3%a1c%20thao%20t%c3%a1c%20v%e1%bb%9bi%20DOM%20trong%20Javascript: http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripte%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=DOM%20l%c3%a0%20g%c3%ac%3f%20C%c3%a1c%20thao%20t%c3%a1c%20v%e1%bb%9bi%20DOM%20trong%20Javascript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscripte%2f'>
+                  <a target="_blank" href='mailto:?subject=DOM%20l%c3%a0%20g%c3%ac%3f%20C%c3%a1c%20thao%20t%c3%a1c%20v%e1%bb%9bi%20DOM%20trong%20Javascript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscripte%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
