--- a/public/blogs2/scriptf/index.html
+++ b/public/blogs2/scriptf/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61722&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
@@ -28,7 +28,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:61722/blogs2/scriptf/">
+<meta property="og:url" content="http://localhost:1313/blogs2/scriptf/">
   <meta property="og:site_name" content="Nhật Trường Blog">
   <meta property="og:title" content="Đối tượng / Object trong Javascript">
   <meta property="og:description" content="Tìm hiểu về đối tượng (Object) trong Javascript, cách tạo và sử dụng các thuộc tính, phương thức, cũng như các thao tác phổ biến với đối tượng.">
@@ -533,22 +533,22 @@
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptf%2f">
+                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptf%2f">
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text=%c4%90%e1%bb%91i%20t%c6%b0%e1%bb%a3ng%20%2f%20Object%20trong%20Javascript&url=http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptf%2f">
+                  <a target="_blank" href="https://twitter.com/share?text=%c4%90%e1%bb%91i%20t%c6%b0%e1%bb%a3ng%20%2f%20Object%20trong%20Javascript&url=http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptf%2f">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text=%c4%90%e1%bb%91i%20t%c6%b0%e1%bb%a3ng%20%2f%20Object%20trong%20Javascript: http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptf%2f">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text=%c4%90%e1%bb%91i%20t%c6%b0%e1%bb%a3ng%20%2f%20Object%20trong%20Javascript: http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptf%2f">
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject=%c4%90%e1%bb%91i%20t%c6%b0%e1%bb%a3ng%20%2f%20Object%20trong%20Javascript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a61722%2fblogs2%2fscriptf%2f'>
+                  <a target="_blank" href='mailto:?subject=%c4%90%e1%bb%91i%20t%c6%b0%e1%bb%a3ng%20%2f%20Object%20trong%20Javascript&amp;body=Check%20out%20this%20site http%3a%2f%2flocalhost%3a1313%2fblogs2%2fscriptf%2f'>
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
